add done button

--- a/Wtest/View/Base.lproj/Main.storyboard
+++ b/Wtest/View/Base.lproj/Main.storyboard
@@ -8,25 +8,40 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--WTest-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController storyboardIdentifier="ViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="ViewController" customModule="Wtest" customModuleProvider="target" sceneMemberID="viewController">
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <viewController storyboardIdentifier="ViewController" title="WTest" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="ViewController" customModule="Wtest" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2RT-8p-iCA">
+                                <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                                <items>
+                                    <barButtonItem style="plain" id="hy0-7l-Op6">
+                                        <searchBar key="customView" contentMode="redraw" misplaced="YES" id="xc3-3j-7g4">
+                                            <rect key="frame" x="20" y="0.0" width="374" height="44"/>
+                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                            <textInputTraits key="textInputTraits"/>
+                                            <scopeButtonTitles>
+                                                <string>Title</string>
+                                                <string>Title</string>
+                                            </scopeButtonTitles>
+                                            <userDefinedRuntimeAttributes>
+                                                <userDefinedRuntimeAttribute type="boolean" keyPath="doneAccessory" value="YES"/>
+                                            </userDefinedRuntimeAttributes>
+                                        </searchBar>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Ivu-hc-8sb">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <rect key="frame" x="0.0" y="104" width="414" height="758"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <searchBar key="tableHeaderView" contentMode="redraw" id="xc3-3j-7g4">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
-                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                    <textInputTraits key="textInputTraits"/>
-                                </searchBar>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" textLabel="lfS-RR-RXT" style="IBUITableViewCellStyleDefault" id="FtM-Qa-yYC">
-                                        <rect key="frame" x="0.0" y="88.5" width="414" height="43.5"/>
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="FtM-Qa-yYC" id="mgi-i3-Qm9">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
@@ -50,8 +65,11 @@
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Ivu-hc-8sb" secondAttribute="trailing" id="6YI-yO-r0S"/>
                             <constraint firstItem="Ivu-hc-8sb" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="A0m-Nh-jjx"/>
+                            <constraint firstItem="Ivu-hc-8sb" firstAttribute="top" secondItem="2RT-8p-iCA" secondAttribute="bottom" constant="16" id="Fxz-gv-mIt"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="2RT-8p-iCA" secondAttribute="trailing" id="Jjt-Ad-sRR"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Ivu-hc-8sb" secondAttribute="bottom" id="MRV-7W-uwX"/>
-                            <constraint firstItem="Ivu-hc-8sb" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="YCS-zT-ZYq"/>
+                            <constraint firstItem="2RT-8p-iCA" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="ZRR-ir-Y87"/>
+                            <constraint firstItem="2RT-8p-iCA" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="dtk-T8-gJ0"/>
                         </constraints>
                     </view>
                     <connections>
@@ -59,9 +77,8 @@
                         <outlet property="tableView" destination="Ivu-hc-8sb" id="rTG-XU-gEG"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="35" y="98"/>
+            <point key="canvasLocation" x="34.782608695652179" y="97.767857142857139"/>
         </scene>
     </scenes>
     <resources>
